--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,4 +1,4 @@
-<!-- About Section -->
+<!-- About Section 
     <section id="about">
         <div class="container">
             <div class="row">
@@ -77,4 +77,21 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
+
+
+    <!-- About Section -->
+<section id="about">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <h2 class="section-heading">About</h2>
+                <p class="text-muted" style="max-width: 700px; margin: 0 auto; font-size: 18px;">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent a nibh 
+                    malesuada, suscipit nulla sed, facilisis augue. Nulla facilisi. Curabitur 
+                    hendrerit sapien eu justo placerat, vitae posuere lorem elementum.
+                </p>
+            </div>
+        </div>
+    </div>
+</section>
