--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,8 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">{{site.title}}</a>
+                <a class="navbar-brand page-scroll" href="#page-top">
+                    <img src="{{ site.baseurl }}/img/logos/logo-gray.svg" alt="Logo" style="height:40px; margin-top:-5px;"></a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -18,10 +19,10 @@
                     <li class="hidden">
                         <a href="#page-top"></a>
                     </li>
-                    <!-- <li>
+                   <li>
                         <a class="page-scroll" href="#services">Services</a>
                     </li>
-                    <li>
+                     <!-- <li>
                         <a class="page-scroll" href="#portfolio">Portfolio</a>
                     </li>-->
                     <li>
