--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,7 +10,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">
-                    <img src="{{ site.baseurl }}/img/logos/logo-gray.svg" alt="Logo" style="height:100px; margin-top:-5px;"></a>
+                    <img src="{{ site.baseurl }}/img/logos/logo-gray.svg" alt="Logo" style="height:30px; margin-top:-5px;"></a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -20,7 +20,7 @@
                         <a href="#page-top"></a>
                     </li>
                    <li>
-                        <a class="page-scroll" href="#services">Services</a>
+                        <a class="page-scroll" href="#services">Goals</a>
                     </li>
                      <!-- <li>
                         <a class="page-scroll" href="#portfolio">Portfolio</a>
