--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -863,5 +863,17 @@ img::-moz-selection {
 }
 
 body {
-    webkit-tap-highlight-color: #{{ site.data.template.color.primary }};
+    -webkit-tap-highlight-color: #{{ site.data.template.color.primary }};
+}
+
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
+.navbar-brand img {
+    max-height: 40px;
+    height: auto;
+    width: auto;
+    max-width: 100%;
 }
